[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Landers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-core = "^2.34.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
